service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-calculator-service
spec:
  type: NodePort  
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001
  selector:
    app: stock-calculator
